# dagster_testbed

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  workspace.yaml
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: index.db
dagster_home/schedules/: schedules.db
my_module/: __init__.py
my_module/assets/my_asset/: asset_1_file.py
my_module/my_jobs/: my_job.py
